PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/HolidayWork__c.object-meta.xml
<CustomObject>
    <label>휴일근무</label>
    <nameField>
        <label>휴일근무이름 (자동입력)</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>