PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/fm_PM__c.field-meta.xml
<CustomField>
    <fullName>fm_PM__c</fullName>
    <description>프로젝트가 있을 경우 프로젝트 관리자 표시</description>
    <formula>Project__r.PM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>프로젝트가 있을 경우 프로젝트 관리자 표시</inlineHelpText>
    <label>프로젝트 관리자</label>
    <type>Text</type>
</CustomField>