PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/fm_ProjectYn__c.field-meta.xml
<CustomField>
    <fullName>fm_ProjectYn__c</fullName>
    <formula>IF(ISBLANK( Project__c ), false, true)</formula>
    <label>프로젝트 유무</label>
    <type>Checkbox</type>
</CustomField>