PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/fm_TotalWorkerCount__c.field-meta.xml
<CustomField>
    <fullName>fm_TotalWorkerCount__c</fullName>
    <formula>TEXT(BLANKVALUE( ru_TotalWorkerCount__c , 0)) &amp; &quot; 명&quot;</formula>
    <label>휴일근무 인원수</label>
    <type>Text</type>
</CustomField>