PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/fm_TotalWorkHour__c.field-meta.xml
<CustomField>
    <fullName>fm_TotalWorkHour__c</fullName>
    <formula>TEXT(BLANKVALUE(ru_TotalWorkTime__c, 0)) &amp; &quot; 시간&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>총 휴일근무 시간</label>
    <type>Text</type>
</CustomField>