PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/HWCode__c.field-meta.xml
<CustomField>
    <fullName>HWCode__c</fullName>
    <description>이전 Name 필드를 Auto Number로 사용했을 때의 휴일근무 코드 이관용 (ToBe 사용X)</description>
    <label>휴일근무 이전코드</label>
    <length>20</length>
    <type>Text</type>
</CustomField>