PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Is_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>계획취소가 승인된 경우 체크됩니다.</inlineHelpText>
    <label>Is Canceled?</label>
    <type>Checkbox</type>
</CustomField>