PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/Is_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Is_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>근무가 승인된 경우 체크됩니다.</inlineHelpText>
    <label>Is Confirm?</label>
    <type>Checkbox</type>
</CustomField>