PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>근무 월</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1월</fullName>
            </value>
            <value>
                <fullName>2월</fullName>
            </value>
            <value>
                <fullName>3월</fullName>
            </value>
            <value>
                <fullName>4월</fullName>
            </value>
            <value>
                <fullName>5월</fullName>
            </value>
            <value>
                <fullName>6월</fullName>
            </value>
            <value>
                <fullName>7월</fullName>
            </value>
            <value>
                <fullName>8월</fullName>
            </value>
            <value>
                <fullName>9월</fullName>
            </value>
            <value>
                <fullName>10월</fullName>
            </value>
            <value>
                <fullName>11월</fullName>
            </value>
            <value>
                <fullName>12월</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>