PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/ru_TotalPlannigCount__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalPlannigCount__c</fullName>
    <label>총 휴일근무 계획 인원수</label>
    <summaryForeignKey>HolidayWorkDetail__c.HolidayWork__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>