PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/ru_TotalWorkerCount__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalWorkerCount__c</fullName>
    <label>총 휴일근무 인원수</label>
    <summaryFilterItems>
        <field>HolidayWorkDetail__c.WorkingTime__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>HolidayWorkDetail__c.WorkingTime__c</field>
        <operation>notEqual</operation>
        <value>근무하지 않음</value>
    </summaryFilterItems>
    <summaryForeignKey>HolidayWorkDetail__c.HolidayWork__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>