PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/ru_TotalWorkTime__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalWorkTime__c</fullName>
    <label>총 휴일근무 시간</label>
    <summarizedField>HolidayWorkDetail__c.fm_Hours__c</summarizedField>
    <summaryForeignKey>HolidayWorkDetail__c.HolidayWork__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>