PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>단계</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>계획작성중</fullName>
                <default>true</default>
                <label>계획작성중</label>
            </value>
            <value>
                <fullName>계획승인요청</fullName>
            </value>
            <value>
                <fullName>계획승인</fullName>
            </value>
            <value>
                <fullName>계획취소승인요청</fullName>
            </value>
            <value>
                <fullName>근무승인요청</fullName>
            </value>
            <value>
                <fullName>근무승인</fullName>
            </value>
            <value>
                <fullName>승인거절</fullName>
                <isActive>false</isActive>
                <label>승인거절</label>
            </value>
            <value>
                <fullName>승인완료</fullName>
                <isActive>false</isActive>
                <label>승인완료</label>
            </value>
            <value>
                <fullName>승인요청</fullName>
                <isActive>false</isActive>
                <label>승인요청</label>
            </value>
            <value>
                <fullName>작성중</fullName>
                <isActive>false</isActive>
                <label>작성중</label>
            </value>
            <value>
                <fullName>취소승인완료</fullName>
                <isActive>false</isActive>
                <label>취소승인완료</label>
            </value>
            <value>
                <fullName>취소승인요청</fullName>
                <isActive>false</isActive>
                <label>취소승인요청</label>
            </value>
            <value>
                <fullName>회수</fullName>
                <isActive>false</isActive>
                <label>회수</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>