PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/WorkingTime__c.field-meta.xml
<CustomField>
    <fullName>WorkingTime__c</fullName>
    <label>근무일자</label>
    <type>Date</type>
</CustomField>