PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/WorkOrderUser__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1차 승인자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HolidayWorkUser</relationshipName>
    <type>Lookup</type>
</CustomField>