PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>근무년도</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2022년</fullName>
            </value>
            <value>
                <fullName>2023년</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>