PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <formula>LEFT(TEXT(Year__c), 4) &amp; &quot;. &quot; &amp; IF(LEN(TEXT(Month__c)) = 3, LEFT(TEXT(Month__c), 2), LEFT(TEXT(Month__c), 1))</formula>
    <label>근무년월</label>
    <type>Text</type>
</CustomField>