PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>WorkingTime__c</columns>
    <columns>ru_TotalPlannigCount__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Confirm__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>