PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/listViews/Holiday_Work_Order_List.listView-meta.xml
<ListView>
    <fullName>Holiday_Work_Order_List</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderUser__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Holiday Work Order List</label>
</ListView>