PA_Education/TestMenifest/force-app/main/default/objects/HolidayWork__c/listViews/My_Holiday_Work.listView-meta.xml
<ListView>
    <fullName>My_Holiday_Work</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderUser__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Holiday Work</label>
</ListView>